--- a/html/KakaoOven/css/dashboard.css
+++ b/html/KakaoOven/css/dashboard.css
@@ -10,7 +10,7 @@ body {
 a{
     text-decoration: none;
 }
-
+co
 .container{
     margin: 0px auto;
     padding: 0px 15px;
@@ -85,6 +85,10 @@ header{
 .page-header{
     display: flex;
     justify-content: space-between;
+
+    margin: 20px;
+    border-bottom: 1px solid #eee;
+    padding: 9px;
 }
 /* 
 .pange-header::before{
@@ -128,7 +132,7 @@ header{
     color: #555;
 }
 
-.search-project .fa-magnifying-glass{
+.search-project .fa-magnifying-glass {
     position: absolute;
     top: 0px;
     right: 0px;
@@ -146,7 +150,7 @@ header{
     box-shadow: 0px 0px 5px 1px #97d7ff;
 }
 
-.btn-toggle{
+.btn-toggle {
     display: flex;
     align-items: center;
 
@@ -157,7 +161,7 @@ header{
     height: 34px;
 }
 
-.change-viewtype{
+.change-viewtype {
     border: 1px solid #fff;
     color: #333;
 
@@ -169,16 +173,197 @@ header{
     cursor: pointer;
 }
 
-.btn-toggle.change-viewtype:first-child{
+.btn-toggle.change-viewtype:first-child {
     border-right: 1px solid #ccc;
 }
 
-.active{
+.active {
     background: radial-gradient(circle,#f0f0f0,#e6e6e6,#ccc );
 
 }
 
-.change-viewtype:not([type=active]):hover{
+.change-viewtype:not([type=active]):hover {
     background-color: #e6e6e6;
 
+}
+
+.row {
+    display: flex;
+}
+
+.nav-stacked {
+    margin: 0;
+    padding: 0px 15px 0px 0px;
+    width: 292.5px;
+
+    list-style-type:none ;
+}
+
+.nav-stacked-list {
+    margin-bottom: 2px;
+    border-radius: 2px;
+    padding: 10px 15px;
+    width: 262.5px;
+    height: 40px;
+
+    cursor: pointer;
+}
+
+.nav-stacked-list:not([class*=active-list]):hover {
+    background-color: #eee;
+}
+
+.active-list {
+    background-color: #3498db;
+    color: #fff;
+}
+
+.project-main {
+    padding-left: 15px;
+    width: 862.5px;
+}
+
+.project-action {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn {
+    border: 1px solid #adadad;
+    border-radius: 2px;
+    padding: 6px 12px;
+    height: 34px;
+    
+    cursor: pointer;
+}
+
+
+.btn-defaul {
+    background-color: white;
+}
+
+.btn-defaul:hover {
+    background-color: #eee;
+}
+
+.btn-primary {
+    background-color: #3498db;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #357ebd;
+    color: white;
+}
+
+.project-list-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px 0px;
+    
+}
+
+.project-item {
+    padding: 0px 15px;
+}
+
+.project-container {
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 4px;
+    width: 252.5px;
+}
+
+.item-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 4px;
+}
+
+.item-option-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+
+    border-radius: 2px;
+    width: 35px;
+    height: 22px;
+
+    cursor: pointer;
+}
+
+.item-option-btn:hover {
+    border: 1px solid #ddd;
+    background-color: #e6e6e6;
+}
+
+.item-option-btn .fa-solid {
+    font-size: 11px;
+    margin: 0px 1px;
+}
+
+.item-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    width: 242.5px;
+    height: 162.5px;
+
+    overflow: hidden;
+
+    cursor: pointer;
+}
+
+.item-img-container img {
+    width: 100%;
+}
+
+.item-content {
+    padding: 9px;
+}
+
+.item-title {
+    margin: 6px 0px 10px;
+
+    font-size: 24px;
+    color:#3498db;
+}
+
+.item-description {
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+    padding-bottom:12px ;
+    height: 48px;
+
+    font-size: 13px;
+}
+
+.project-tiem {
+    margin-bottom: 5px;
+
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.project-tiem .fa-clock {
+    font-size: 12px;
+}
+
+.btn-test {
+    padding: 1.8px 5.4px 2.7px;
+
+    height: auto;
+    line-height: 10px;
+
+    background-color: #5cd85c;
+    color: white;
+    font-size: 10px;
+
+    cursor: pointer;
 }
